--- a/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Base.lproj/Main.storyboard
@@ -16,11 +16,107 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="0SB-SA-2AC">
+                                <rect key="frame" x="0.0" y="99" width="600" height="501"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wKM-Rc-ehD">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="55"/>
+                                <color key="backgroundColor" red="1" green="0.3106288794" blue="0.36250298739999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="55" id="gDO-IE-Vbo"/>
+                                </constraints>
+                            </view>
+                            <searchBar contentMode="redraw" ambiguous="YES" misplaced="YES" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="dXn-nV-cE7">
+                                <rect key="frame" x="0.0" y="55" width="600" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="snh-cT-Uk5">
+                                <rect key="frame" x="20" y="119" width="560" height="461"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="HFs-Or-23d">
+                                    <size key="itemSize" width="109" height="110"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PokeCell" id="lRU-BR-ZBd" customClass="PokeCell" customModule="Pokedex" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="109" height="110"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="109" height="110"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="297" translatesAutoresizingMaskIntoConstraints="NO" id="csg-Mu-keg">
+                                                    <rect key="frame" x="0.0" y="0.0" width="109" height="89"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iR6-S6-P0K">
+                                                    <rect key="frame" x="0.0" y="89" width="109" height="21"/>
+                                                    <color key="backgroundColor" red="1" green="0.3106288794" blue="0.36250298739999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="ym1-cp-h76"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="12"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <color key="backgroundColor" white="1" alpha="0.6982489224137931" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="csg-Mu-keg" secondAttribute="trailing" id="3p4-NU-rn3"/>
+                                            <constraint firstItem="csg-Mu-keg" firstAttribute="top" secondItem="lRU-BR-ZBd" secondAttribute="top" id="LbB-RD-bYm"/>
+                                            <constraint firstItem="iR6-S6-P0K" firstAttribute="top" secondItem="csg-Mu-keg" secondAttribute="bottom" id="Lp0-pQ-DaY"/>
+                                            <constraint firstItem="csg-Mu-keg" firstAttribute="leading" secondItem="lRU-BR-ZBd" secondAttribute="leading" id="aa4-ed-hqS"/>
+                                            <constraint firstAttribute="trailing" secondItem="iR6-S6-P0K" secondAttribute="trailing" id="csy-PX-Cs2"/>
+                                            <constraint firstAttribute="bottom" secondItem="iR6-S6-P0K" secondAttribute="bottom" id="e9R-cR-lpm"/>
+                                            <constraint firstItem="iR6-S6-P0K" firstAttribute="leading" secondItem="lRU-BR-ZBd" secondAttribute="leading" id="yYb-KU-pLh"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="Namelbl" destination="iR6-S6-P0K" id="AZR-O9-kEv"/>
+                                            <outlet property="ThumbImg" destination="csg-Mu-keg" id="fjA-tz-ARq"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="0SB-SA-2AC" secondAttribute="bottom" id="0hb-IG-9MG"/>
+                            <constraint firstItem="wKM-Rc-ehD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="4vl-Yc-hbs"/>
+                            <constraint firstItem="dXn-nV-cE7" firstAttribute="top" secondItem="wKM-Rc-ehD" secondAttribute="bottom" id="5Eq-r0-jiE"/>
+                            <constraint firstAttribute="trailing" secondItem="dXn-nV-cE7" secondAttribute="trailing" id="961-Dk-WR1"/>
+                            <constraint firstItem="snh-cT-Uk5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="BNP-s3-6Cq"/>
+                            <constraint firstItem="0SB-SA-2AC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="EJH-Ms-Pvi"/>
+                            <constraint firstAttribute="trailing" secondItem="snh-cT-Uk5" secondAttribute="trailing" constant="20" id="Flg-A4-p6J"/>
+                            <constraint firstItem="snh-cT-Uk5" firstAttribute="top" secondItem="dXn-nV-cE7" secondAttribute="bottom" constant="20" id="Qgw-gq-pKl"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="snh-cT-Uk5" secondAttribute="bottom" constant="20" id="Xd8-O6-e60"/>
+                            <constraint firstItem="0SB-SA-2AC" firstAttribute="top" secondItem="dXn-nV-cE7" secondAttribute="bottom" id="Yid-4J-lsM"/>
+                            <constraint firstItem="0SB-SA-2AC" firstAttribute="top" secondItem="wKM-Rc-ehD" secondAttribute="bottom" id="erS-ag-ONu"/>
+                            <constraint firstItem="dXn-nV-cE7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="g5P-bo-vdS"/>
+                            <constraint firstAttribute="trailing" secondItem="0SB-SA-2AC" secondAttribute="trailing" id="kZu-97-KFb"/>
+                            <constraint firstItem="wKM-Rc-ehD" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="mNq-Li-N43"/>
+                            <constraint firstAttribute="trailing" secondItem="wKM-Rc-ehD" secondAttribute="trailing" id="tb8-hR-fit"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="erS-ag-ONu"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="collectionview" destination="snh-cT-Uk5" id="tZB-5X-G7W"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="280" y="312"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="297" width="120" height="120"/>
+        <image name="bg" width="1920" height="1200"/>
+    </resources>
 </document>
